<resources>
    <string name="app_name">SpendSmart</string>
    <string name="tagline">Smart way to split bills</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_friends">Friends</string>
    <string name="text_addexpenses">Add Expenses</string>
    <string name="text_activity">Activity</string>
    <string name="text_settings">Settings</string>
    <string name="text_logout">Logout</string>
    <string name="dashboard">Dashboard Page</string>
    <string name="friends">Friends page</string>
    <string name="addexpenses">Add Expenses Page</string>
    <string name="activity">Activity Page</string>
    <string name="settings">Settings Page</string>
    <string name="title_activity_login">Sign in</string>
    <string name="desc_splitsmart_lockup">SplitSmart logo and name</string>
    <string name="emailpassword_title_text">Sign In/Sign Up</string>
    <string name="signed_out">Signed Out</string>
    <string name="disconnect">Disconnect</string>


    <!-- Strings related to login -->
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="loading">Loading…</string>
    <string name="verify_email">Verify Email</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_contact">Contact</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">Authentication failed</string>

    <string name="addFriendHint">Enter friend name</string>
    <string name="USER_EMAIL">email</string>
    <string name="USER_NAME">name</string>
    <string name="GCM_TOKEN">GCM Token</string>
    <string name="default_notification_channel_id">default notification channel</string>
    <string name="invitation_title">Join Splitsmart</string>
    <string name="invitation_cta">Install!</string>
    <string name="invitation_message">This app is terrific, give it a try!</string>
    <string name="invitation_SplitSmart">http://example.com/offer/five_dollar_offer</string>

    <!-- Firebase Database Nodes -->
    <string name="dbnode_notification">notification</string>
    <string name="dbnode_messages">messages</string>
    <string name="dbnode_users">users</string>
    <string name="dbnode_events">events</string>
    <string name="dbnode_items">items</string>

    <!-- Firebase Database Fields -->
    <string name="field_message">message</string>
    <string name="field_user_id">user_id</string>
    <string name="field_user_name">mshname</string>
    <string name="field_messaging_token">messaging_token</string>

    <!-- FCM Related Strings -->
    <string name="data_type">data_type</string>
    <string name="direct_message">direct_message</string>
    <string name="data_message">message</string>
    <string name="data_title">title</string>
    <string name="data_message_id">message_id</string>

    <string-array name="settings">
        <item>Home</item>
        <item>Edit Profile</item>
        <item>Invite Friends</item>
        <item>Logout</item>
    </string-array>

    <!-- Strings related to add expenses -->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="manual">MANUAL LIST</string>
    <string name="string_open_camera">OPEN CAMERA</string>
    <string name="string_next">Next</string>
    <string name="string_save_and_add_another_item">Save and Add Another Item</string>
    <string name="string_save_and_finish">Save and Finish</string>
    <string name="string_item_name">Item Name</string>
    <string name="string_0_00">$0.00</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>

    <!-- Strings for ocrlibrary -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Storage doesn\'t available</string>
    <string name="title_activity_ocr">Ocr Capture Activity</string>

    <string-array name="category_array">
        <item>Shopping</item>
        <item>Food</item>
        <item>Rent</item>
        <item>Grocery</item>
        <item>Travel</item>
        <item>Utility</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="splitAmount_EquallyOrNot">
        <item>Charge Full Amount to Friend</item>
        <item>Split Equally</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

