

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"

        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView

            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/desc_splitsmart_lockup"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/emailpassword_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc"
            android:visibility="invisible"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/email_password_buttons"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            tools:visibility="invisible" />


    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">
            <Button

                android:id="@+id/button"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"

                android:layout_weight="1"
                android:layout_height="50dp"

                android:text="Login"
                android:background="#909faa"
                android:textColor="#ffffff"


                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp" />
            <Button
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:id="@+id/button2"
                android:height="50dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="#48a999"

                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:text="Sign Up"

                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>




</LinearLayout>
